Better card layout Added a grid template for one 100%-width column in .card to avoid displacing other elements in case of overflow, and overflow-wrap to individual grid elements to try and fit content.

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ main {
     background-color: var(--lavender-web);
     display: grid;
     grid-template-rows: auto repeat(4, 1fr);
+    grid-template-columns: 100%;
     border: .5rem solid var(--acid-green);
 }
 
@@ -90,6 +91,7 @@ main {
 .title, .author, .pages, .was-read {
     padding-left: 10%;
     padding-right: 10%;
+    overflow-wrap: normal;
 }
 
 .modal {
